--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "server": "node --env-file .env --watch index.js",
+    "server": "deno run --config tsconfig.json --allow-env --env-file .env index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,10 +19,15 @@
   },
   "homepage": "https://github.com/jesusdavidlm3/FACOLUZ-Back-StudControl#readme",
   "dependencies": {
+    "@types/jsonwebtoken": "^9.0.8",
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mariadb": "^3.4.0",
     "uuid": "^11.0.5"
+  },
+  "devDependencies": {
+    "@types/express": "^5.0.0",
+    "typescript": "^5.7.2"
   }
 }
